--- a/style.css
+++ b/style.css
@@ -2,37 +2,35 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 }
 
 body{
+    
 
 
 }
 header{
 
-
+    text-align: center;
 }
 
 main{
-
     width: 570px;
-    margin: 0 auto;   
-
+    margin: 0 auto;
+    text-align: center;   
 }
 
 .linha{
     display: flex;
-
 }
 
 .linha > *{
     width: 40px;
-    height: 40px;
-    
+    height: 40px;    
 }
 
 #jogo{
-
 
 }
 
@@ -40,16 +38,58 @@ main{
     width: 40px;
     height: 40px;
     border-style: none;    
-    background-image: url(./img/tijolo.webp);
- 
+    background-image: url(./img/tijolo.webp); 
 }
 .piso{
     width: 40px;
     height: 40px;
-    background-image: url(./img/piso3.png);
+    background-image: url(./img/piso3.png);   
 }
 
-.start{
 
-    background-color: red;
+.start{   
+    /* background-image: url(./img/jogador.png); */   
+
 }
+img{
+    width: 100%;
+    height: 100%;
+}
+
+#jogador{
+    animation-duration: 100ms;    
+    -webkit-animation: 4s linear 0s infinite alternate move_eye;
+    animation: 4s linear 0s infinite alternate move_eye;
+}
+
+#mensagem{
+      width: 100%;
+      min-width: 250px;
+      max-width: 250px;      
+      height: auto;      
+      background-color: rgba(0,0,0,0.1);
+      margin: 0 15px;
+      padding: 8px;
+      border-radius: 10px;
+      border: solid 2px white;
+      box-shadow: 0 0 1em gold;
+      transition: all 0.3 3s linear;
+      z-index: 100;
+}
+
+button{
+    margin-top: 20px;
+    padding: 5px 15px;
+    border-radius: 10px;
+    border-style: none;   
+    background-color: rgba(0,0,0,0.1);   
+}
+button :hover{
+    border-style: none;
+}
+
+
+/* .hide{
+    
+    display: none;
+} */
